--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
-    "expo": "~52.0.25",
+    "expo": "^52.0.25",
     "expo-av": "^15.0.2",
     "expo-camera": "^16.0.11",
     "expo-image-manipulator": "^13.0.6",
     "expo-image-picker": "^16.0.4",
+    "expo-modules-core": "^2.1.3",
     "expo-router": "^4.0.16",
     "expo-splash-screen": "^0.29.20",
     "expo-status-bar": "~2.0.1",
@@ -24,20 +25,20 @@
     "nativewind": "^4.1.23",
     "pod-install": "^0.3.4",
     "react": "^18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "^0.76.6",
     "react-native-fast-tflite": "^1.5.1",
     "react-native-gesture-handler": "^2.22.0",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-really-awesome-button": "^2.0.4",
-    "react-native-reanimated": "^3.16.6",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-svg": "^15.11.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-svg": "15.8.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "latest",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
   },
